# ai-assignments

./: .gitignore  readme.md
agent-layers-demo/: README.md  action.py  cot_tools.py  decision.py  main.py  memory.py  perception.py  pyproject.toml  utils.py
cot-demo/: README.md  cot_tools.py  main.py  pyproject.toml
embeddings-demo/: .gitignore  README.md
embeddings-demo/backend/: agent.py  app.py  mcp_server.py  pyproject.toml  requirements.txt  utils.py
embeddings-demo/backend/cognitive_layers/: action.py  decision.py  memory.py  perception.py
embeddings-demo/extension/: manifest.json  popup.html  popup.js
start-with-agent/: .gitignore  README.md  app.py  background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  requirements.txt  webpack.config.js
start-with-mcp/: README.md  mcpserver.py  requirements.txt  talk2mcp-2.py  talk2mcp.py
